<resources>
    <string name="app_name" translatable="false">NutriCheck</string>
    <string name="onboarding_title">Willkommen bei NutriCheck!</string>
    <string name="onboarding_description">Dein smarter Kalorien- und Gewichtsbegleiter</string>
    <string name="onboarding_button_start">Loslegen</string>
    <string name="onboarding_button_next">Weiter</string>
    <string name="onboarding_question_name">Wie heißt du?</string>
    <string name="onboarding_question_birthdate">Wann bist du geboren?</string>
    <string name="onboarding_question_height">Wie groß bist du?</string>
    <string name="onboarding_question_weight">Wie viel wiegst du?</string>
    <string name="onboarding_question_target_weight">Welches Zielgewicht hast du?</string>
    <string name="onboarding_question_gender">Als was identifizierst du dich?</string>
    <string name="onboarding_question_activity_level">Wie oft treibst du Sport?</string>
    <string name="onboarding_question_goal">Welches Ziel verfolgst du aktuell?</string>

    <string name="userData_label_name">Name</string>
    <string name="userData_label_birthdate">Geburtsdatum</string>
    <string name="userData_label_height">Größe (cm)</string>
    <string name="userData_label_weight">Gewicht (kg)</string>
    <string name="userData_label_target_weight">Zielgewicht (kg)</string>
    <string name="userData_label_gender_male">Männlich</string>
    <string name="userData_label_gender_female">Weiblich</string>
    <string name="userData_label_gender_diverse">Divers</string>
    <string name="userData_label_activity_level_never">Nie</string>
    <string name="userData_label_goal_lose_weight">Abnehmen</string>
    <string name="userData_label_goal_gain_weight">Zunehmen</string>
    <string name="userData_error_name_required">Das Namensfeld darf nicht leer sein.</string>
    <string name="userData_label_goal_maintain_weight">Gewicht halten</string>
    <string name="userData_label_activity_level_occasionally">1–2/Woche</string>
    <string name="userData_label_activity_level_regularly">3–4/Woche</string>
    <string name="userData_label_activity_level_frequently">5+/Woche</string>

    <string name="profile_name">Hi, %1$s</string>
    <string name="profile_menu_age">Alter</string>
    <string name="profile_menu_height">Größe</string>
    <string name="profile_menu_weight">Gewicht</string>
    <string name="profile_menu_target_weight">Zielgewicht</string>
    <string name="age_years">%1$s Jahre</string>
    <string name="height_cm" translatable="false">%1$s cm</string>
    <string name="weight_kg" translatable="false">%1$s kg</string>
    <string name="profile_menu_item_personal_data">Persönliche Daten &amp; Ziel</string>
    <string name="profile_menu_item_weight_history">Gewichtsverlauf</string>
    <string name="profile_menu_item_darkmode">Dunkler Modus</string>
    <string name="profile_menu_item_language">Sprache</string>
    <string name="select_language_title">Sprache auswählen</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="profile_menu_item_gender">Geschlecht</string>
    <string name="profile_menu_item_activity_level">Aktivitätslevel</string>
    <string name="profile_menu_item_goal">Ziel</string>

    <string name="navigation_bar_label_home">Start</string>
    <string name="navigation_bar_label_profile">Profil</string>
    <string name="navigation_bar_label_add">Hinzufügen</string>
    <string name="navigation_bar_label_diary">Tagebuch</string>

    <string name = "create_recipe_error_ingredients">Bitte mindestens eine Zutat hinzufügen</string>


    <string name="add_dialog_meal_title">Mahlzeit hinzufügen</string>
    <string name="add_dialog_recipe_title">Rezept hinzufügen</string>
    <string name="add_dialog_scan_title">Essen scannen</string>
    <string name="search_page_title">Zutaten hinzufügen</string>
    <string name="search_page_label_all">Alle</string>
    <string name="search_page_label_my_recipes">Meine Rezepte</string>
    <string name="back_button_description">zurück Knopf</string>
    <string name="add_weight_entry_description">neues Gewicht hinzufügen Knopf\n</string>
    <string name="add_weight_entry_title">Trage ein Gewicht ein</string>
    <string name="date_label">Datum</string>
    <string name="select_date_description">Auswählen eines Datums</string>
    <string name="retake_photo">neues Foto</string>
    <string name="submit_photo">Foto verwenden</string>
    <string name="take_photo">Foto aufnehmen</string>
    <string name="label_ok">OK</string>
    <string name="camera_permission_required">Kamera-Zugriff benötigt</string>
    <string name="camera_permission_explanation">Um ein Foto aufzunehmen, benötigt die App die Erlaubnis für die Kamera</string>
    <string name="grant_permission">Erlauben</string>
   <string name="weight_range_1_month" translatable="false">1M</string>
    <string name="weight_range_3_months" translatable="false">3M</string>
    <string name="weight_range_6_months" translatable="false">6M</string>
    <string name="label_weightHistory">Gewichtsverlauf</string>
    <string name="calorie_history">Kalorienverlauf</string>
    <string name="label_calories">Kalorien</string>
    <string name="label_retry">Erneut versuchen</string>
    <string name="label_search_recipe">Rezept suchen</string>
    <string name="search_page_label_online_recipes">Online Rezepte</string>
    <string name="label_enter_search_word">Bitte gebe einen Suchbegriff ein</string>
    <string name="label_add_recipe">Rezept hinzufügen</string>
    <string name="label_add_ingredient">Zutaten hinzufügen</string>

    <string name="homepage_day_description">Heute</string>
    <string name="homepage_calorie_history">Kalorienverlauf</string>
    <string name="homepage_weight_progress">Gewichtsfortschritt</string>
    <string name="homepage_nutrition_protein">Protein</string>
    <string name="homepage_nutrition_carbs">Kohlenhydrate</string>
    <string name="homepage_nutrition_fats">Fette</string>

    <string name="label_breakfast">Frühstück</string>
    <string name="label_lunch">Mittagessen</string>
    <string name="label_dinner">Abendessen</string>
    <string name="label_snack">Snack</string>
    <string name="label_calories_remaining">Verbleibende Kalorien</string>
    <string name="label_calorie_goal">Ziel</string>
    <string name="label_calories_consumed">Konsumiert</string>
    <string name="label_remaining">Verbleibend</string>
    <string name="label_history_add">+ Hinzufügen</string>
    <string name="label_macronutrition" translatable="false">Macros</string>
    <string name="range_7_days">7T</string>
    <string name="range_30_days">30T</string>
    <string name="range_60_days">60T</string>
    <string name="label_1_week" translatable="false">1W</string>
    <string name="label_2_weeks" translatable="false">2W</string>
    <string name="label_3_weeks" translatable="false">3W</string>
    <string name="label_6_weeks" translatable="false">6W</string>
    <string name="label_9_weeks" translatable="false">9W</string>
    <string name="label_1_month" translatable="false">1M</string>
    <string name="label_3_months" translatable="false">3M</string>
    <string name="range_1_month" translatable="false">1M</string>
    <string name="range_6_months" translatable="false">6M</string>
    <string name="range_12_months" translatable="false">12M</string>
    <string name="range_15_days">15T</string>
    <string name="range_2_months" translatable="false">2M</string>
    <string name="range_3_months" translatable="false">3M</string>
    <string name="range_4_months" translatable="false">4M</string>
    <string name="range_9_months" translatable="false">9m</string>
    <string name="label_history">Verlauf</string>
    <string name="label_recipes">Rezepte</string>
    <string name="label_ingredients">Zutaten</string>

    <string name="error_encoding_image">Fehler beim Verarbeiten des Bildes, bitte nimm ein neues Bild auf</string>
    <string name="error_no_photo_taken">Es wurde kein Foto aufgenommen, bitte nimm ein neues Foto auf</string>
    <string name="error_searching_recipes">Server-Fehler beim Abrufen der Rezepte: %s</string>
    <string name="userData_error_invalid_date">Ungültiges Datum</string>
    <string name="userData_error_birthdate_required">Das Geburtsdatum darf nicht leer sein.</string>
    <string name="userData_error_height_required">Die Größe darf nicht leer sein.</string>
    <string name="userData_error_weight_required">Das Gewicht darf nicht leer sein.</string>
    <string name="userData_error_target_weight_required">Das Zielgewicht darf nicht leer sein.</string>
    <string name="userData_error_gender_required">Bitte wähle ein Geschlecht aus.</string>
    <string name="userData_error_activity_level_required">Bitte wähle dein Aktivitätslevel aus.</string>
    <string name="userData_error_goal_required">Bitte wähle ein Ziel aus.</string>
    <string name="userData_error_name_too_short">Der eingegebene Name ist zu kurz</string>
    <string name="userData_error_name_too_long">Der eingegebene Name ist zu lang</string>
    <string name="userData_error_height_too_short">Die eingegebene Größe ist zu klein</string>
    <string name="userData_error_height_too_tall">Die eingegebene Größe ist zu groß</string>
    <string name="userData_error_weight_too_low">Das eingegebene Gewicht ist zu klein</string>
    <string name="userData_error_weight_too_high">Das eingegebene Gewicht ist zu groß</string>
    <string name="userData_error_birthdate_future">Das eingegebene Geburtsdatum liegt in der Zukunft</string>
    <string name="userData_error_birthdate_too_old">Das eingegebene Geburtsdatum ist zu alt</string>
    <string name="userData_error_target_weight_too_low">Das eingegebene Zielgewicht ist zu niedrig</string>
    <string name="userData_error_target_weight_too_high">Das eingegebene Zielgewicht ist zu hoch</string>
    <string name="error_no_food_detected">Es wurde kein Essen erkannt, bitte nimm ein neues Bild auf</string>
    <string name="recipe_name_placeholder">Rezeptname</string>
    <string name="recipe_description">Beschreibung</string>
    <string name="meal_logged_success">Mahlzeit erfolgreich hinzugefügt</string>
    <string name="show_error_message_title">Ups, es ist etwas schief gelaufen</string>
    <string name="error_not_enough_ingredients">Bitte füge mindestens zwei Zutaten hinzu.</string>
    <string name="error_no_recipe_name">Bitte gebe deinem Rezept einen Namen.</string>
    <string name="error_missing_dayTime">Bitte wähle eine Tageszeit für Mahlzeit aus</string>
    <string name="error_create_meal_missing_foodComponent">Bitte füge mindestens ein Lebensmittelprodukt oder Rezept zur Mahlzeit hinzu.</string>
    <string name="label_select_meal">Tageszeit</string>
    <string name="error_search_result_empty">Keine Ergebnisse gefunden</string>
    <string name="label_delete">Löschen</string>
    <string name="delete_weight_dialog_title">"Möchtest du das Gewicht wirklich löschen? "</string>
    <string name="kilocalories"> kcal</string>
    <string name="searchbar_placeholder_regular">Suche</string>
    <string name="search_tab_all">Alle</string>
    <string name="search_tab_my_recipes">Meine Rezepte</string>
    <string name="error_ai_server_response">Die Antwort des Servers ist fehlerhaft, bitte versuche es erneut</string>
    <string name="io_exception_message">Bitte überprüfe deine Internetverbindung</string>
    <string name="upload_recipe_409_error_message">Hochladen fehlgeschlagen: Das Rezept, das Sie hochladen möchten, existiert bereits.</string>
    <string name="upload_recipe_401_error_message">Hochladen fehlgeschlagen: Fehlende Authorizierung. Bitte melden Sie sich an.</string>
    <string name="upload_recipe_general_error_message">Hochladen fehlgeschlagen</string>
    <string name="unknown_error_message">Unbekannter Server Fehler.</string>
    <string name="meal_item_menu_title">Aktion auswählen</string>
    <string name="meal_item_menu_text">Möchtest du dieses Gericht entfernen?</string>
    <string name="meal_item_menu_remove">Entfernen</string>
    <string name="meal_item_menu_cancel">Abbrechen</string>
    <string name="snackbar_message_recipe_saved">Rezept gespeichert</string>
    <string name="snackbar_message_recipe_updated">Rezept aktualisiert</string>
    <string name="snackbar_message_meal_saved">Mahlzeit hinzugefügt</string>
    <string name="snackbar_message_recipe_reported">Rezept gemeldet</string>
    <string name="snackbar_message_recipe_uploaded">Rezept hochgeladen</string>
    <string name="snackbar_message_recipe_downloaded">Rezept heruntergeladen</string>
    <string name="snackbar_message_recipe_deleted">Rezept gelöscht</string>
    <string name="snackbar_message_addmeal_foodproduct_added">Lebensmittel hinzugefügt</string>
    <string name="snackbar_message_addmeal_recipe_added">Rezept hinzugefügt</string>
    <string name="snackbar_message_addmeal_foodproduct_removed">Lebensmittel entfernt</string>
    <string name="snackbar_message_addmeal_recipe_removed">Rezept entfernt</string>
    <string name="snackbar_message_ingredient_added">Zutat hinzugefügt</string>
    <string name="snackbar_message_ingredient_removed">Zutat entfernt</string>
    <string name="foodcomponent_servings_label">Portionen:</string>
    <string name="foodproduct_servingsize_label">Portionsgröße</string>
    <string name="report_dialog_title">Melden</string>
    <string name="report_dialog_persist">Senden</string>
    <string name="report_text_placeholder">Bitte geben Sie einen Grund für die Meldung dieses Rezepts an.</string>
    <string name="save_recipe_content_description" translatable="false">save recipe</string>
    <string name="details" translatable="false">Details</string>
    <string name="error_servings_range">Bitte wähle einen Wert zwischen %1$s und %2$s.</string>
    <string name="persist_description" translatable="false">Persist</string>
    <string name="serving_size_gram">%1$d Gramm</string>
    <string name="serving_size_grams">%1$d Gramm</string>
    <string name="onboarding_button_finish">Abschließen</string>
</resources>